Sun Nov 24 01:03:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_power): Use FIX2LONG instead
	  of FIX2INT to avoid conversion error.

Sun Nov 24 00:44:30 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (RBIGNUM_EMBED_LEN_MAX): define by macros
	  defined in defines.h, instead of complex and repeated expression.

Sat Nov 23 22:22:26 2013  Tanaka Akira  <akr@fsij.org>

	* include/ruby/ruby.h (RBIGNUM_EMBED_LEN_MAX): Limit the value to
	  less than 8.

Sat Nov 23 19:52:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/lib/bigdecimal/math.rb (BigMath.E): Use BigMath.exp.
	  [Feature #6857] [ruby-core:47130]

Sat Nov 23 19:46:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigMath_s_exp): Optimize the
	  calculation algorithm to reduce the number of divisions.
	  This optimization was proposed by Rafał Michalski.
	  [Feature #6857] [ruby-core:47130]

Sat Nov 23 19:20:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_div2): The signature was
	  changed to allow us to pass arguments directly.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_div3): Added for the role of
	  the old BigDecimal_div2.

Sat Nov 23 12:31:00 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: fix global variable name.
	  Now we have following environments (and related variable names).

	  * RUBY_GC_HEAP_INIT_SLOTS
	  * RUBY_GC_HEAP_FREE_SLOTS
	  * RUBY_GC_HEAP_GROWTH_FACTOR (new from 2.1)
	  * RUBY_GC_HEAP_GROWTH_MAX_SLOTS (new from 2.1)

	  * obsolete
	    * RUBY_FREE_MIN       -> RUBY_GC_HEAP_FREE_SLOTS (from 2.1)
	    * RUBY_HEAP_MIN_SLOTS -> RUBY_GC_HEAP_INIT_SLOTS (from 2.1)

	  * RUBY_GC_MALLOC_LIMIT
	  * RUBY_GC_MALLOC_LIMIT_MAX (new from 2.1)
	  * RUBY_GC_MALLOC_LIMIT_GROWTH_FACTOR (new from 2.1)

	  * RUBY_GC_OLDSPACE_LIMIT (new from 2.1)
	  * RUBY_GC_OLDSPACE_LIMIT_MAX (new from 2.1)
	  * RUBY_GC_OLDSPACE_LIMIT_GROWTH_FACTOR (new from 2.1)
